[package]
name = "substrate-finality-grandpa"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.1"
parity-codec = "2.2"
parity-codec-derive = "2.0"
runtime_primitives = { package = "sr-primitives", path = "../sr-primitives" }
consensus_common = { package = "substrate-consensus-common", path = "../consensus/common" }
substrate-primitives = { path = "../primitives" }
client = { package = "substrate-client", path = "../client" }
network = { package = "substrate-network", path = "../network" }
service = { package = "substrate-service", path = "../service", optional = true }
log = "0.4"
parking_lot = "0.7.1"
tokio = "0.1.7"
fg_primitives = { package= "substrate-finality-grandpa-primitives", path = "primitives" }
rand = "0.6"

[dependencies.grandpa]
package = "finality-grandpa"
version = "0.5.1"
features = ["derive-codec"]

[dev-dependencies]
network = { package = "substrate-network", path = "../network", features = ["test-helpers"] }
keyring = { package = "substrate-keyring", path = "../keyring" }
test_client = { package = "substrate-test-client", path = "../test-client"}
env_logger = "0.6"

[features]
default = ["service-integration"]
service-integration = ["service"]
